[package]
name = "oeuvre"
version = "0.1.0"
authors = ["Isabelle Wedin <wcwedin+oeuvre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
glob = "0.3.0"
itertools = "0.10.3"
minidom = "0.13.0"
quick-xml = "0.22.0"
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.8"
unwrap = "1.2.1"
